# first-rag

./: .gitignore  README.md  pyproject.toml
first_rag/: app.py  chat_helpers.py  config.py  db_helpers.py  utils.py  video_db_helpers.py
