[tool.poetry]
name = "first-rag"
version = "0.1.0"
description = ""
authors = ["Aung Khant Phyo <itsakphyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.2.12"
langchain-community = "^0.3.11"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
ipykernel = "^6.29.5"
grandalf = "^0.8"
chromadb = "^0.5.23"
pypdf = "^5.1.0"
langchain-chroma = "^0.1.4"
streamlit = "^1.41.1"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
